--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -5,17 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Frontend Mentor | grid testimonials</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
 </head>
 <body>
-  Daniel Clifford
+<div class="container">
+  <div>
+    <img src="images/image-daniel.jpg">
+
+    <h1>Daniel Clifford</h1>
   Verified Graduate
 
   I received a job offer mid-course, and the subjects I learned were current, if not more so, 
@@ -26,24 +27,30 @@
   for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
   The next 12 weeks was the best - and most grueling - time of my life. Since completing 
   the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-
-  Jonathan Walters
+  </div>
+  <div>
+    <img src="images/image-jonathan.jpg">
+    <h1>Jonathan Walters</h1>
   Verified Graduate
 
   The team was very supportive and kept me motivated
 
   “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
   for a big company. This was one of the best investments I’ve made in myself. ”
-
-  Jeanette Harmon
+  </div>
+  <div>
+    <img src="images/image-jeanette.jpg">
+    <h1>Jeanette Harmon</h1>
   Verified Graduate
 
   An overall wonderful and rewarding experience
 
   “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
   while doing something I love. ”
-
-  Patrick Abrams
+  </div>
+  <div>
+    <img src="images/image-patrick.jpg">
+    <h1>Patrick Abrams</h1>
   Verified Graduate
 
   Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
@@ -53,8 +60,10 @@
   gave me the confidence necessary to be able to go out in the world and present myself as a capable 
   junior developer. The standard is above the rest. You will get the personal attention you need from 
   an incredible community of smart and amazing people. ”
-
-  Kira Whittle
+  </div>
+  <div>
+    <img src="images/image-kira.jpg">
+    <h1>Kira Whittle</h1>
   Verified Graduate
 
   Such a life-changing experience. Highly recommended!
@@ -67,7 +76,8 @@
   could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
   experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
   100% recommend! ”
-  
+  </div>
+</div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
