--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
 <div class="container">
-  <div>
-    <img src="images/image-daniel.jpg">
+  <div class="daniel">
 
-    <h1>Daniel Clifford</h1>
+
+    <h1><img src="images/image-daniel.jpg">Daniel Clifford</h1>
   Verified Graduate
 
   I received a job offer mid-course, and the subjects I learned were current, if not more so, 
@@ -28,9 +28,9 @@
   The next 12 weeks was the best - and most grueling - time of my life. Since completing 
   the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
   </div>
-  <div>
-    <img src="images/image-jonathan.jpg">
-    <h1>Jonathan Walters</h1>
+  <div class="jonathan">
+
+    <h1><img src="images/image-jonathan.jpg">Jonathan Walters</h1>
   Verified Graduate
 
   The team was very supportive and kept me motivated
@@ -38,9 +38,9 @@
   “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
   for a big company. This was one of the best investments I’ve made in myself. ”
   </div>
-  <div>
-    <img src="images/image-jeanette.jpg">
-    <h1>Jeanette Harmon</h1>
+  <div class="jeanette">
+
+    <h1><img src="images/image-jeanette.jpg">Jeanette Harmon</h1>
   Verified Graduate
 
   An overall wonderful and rewarding experience
@@ -48,9 +48,9 @@
   “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
   while doing something I love. ”
   </div>
-  <div>
-    <img src="images/image-patrick.jpg">
-    <h1>Patrick Abrams</h1>
+  <div class="patrick">
+
+    <h1><img src="images/image-patrick.jpg">Patrick Abrams</h1>
   Verified Graduate
 
   Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
@@ -61,9 +61,9 @@
   junior developer. The standard is above the rest. You will get the personal attention you need from 
   an incredible community of smart and amazing people. ”
   </div>
-  <div>
-    <img src="images/image-kira.jpg">
-    <h1>Kira Whittle</h1>
+  <div class="kira">
+
+    <h1><img src="images/image-kira.jpg">Kira Whittle</h1>
   Verified Graduate
 
   Such a life-changing experience. Highly recommended!
