should've started mobile first, but media query is in and seems to be working better

--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -16,8 +16,10 @@
   <div class="daniel">
     <div>
     <img src="images/image-daniel.jpg">
+      <div class="profile-title">
     <h1>Daniel Clifford</h1>
     <h1>Verified Graduate</h1>
+      </div>
     </div>
   <p>I received a job offer mid-course, and the subjects I learned were current, if not more so,
     in the company I joined. I honestly feel I got every penny’s worth.</p>
