--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container">
   <div class="daniel">
-    <div>
+    <div class="inner-grid">
     <img src="images/image-daniel.jpg">
       <div class="profile-title">
     <h1>Daniel Clifford</h1>
